# Order-management-V3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  test_runner  trigger.cpp
.github/workflows/: cross-platform-ci.yml
data/: ordersFile.csv
include/: NameValidation.h  UserDatabase.h  addOrder.h  deleteOrder.h  displayOrders.h  exception.h  file_manager.h  getValidDouble.h  getValidInt.h  globalVariable.h  menu.h  order.h  order_system.h  printStoreOrders.h  product.h  product_factory.h  searchOrder.h  setupCustomerFields.h  setupProducts.h
src/: NameValidation.cpp  UserDatabase.cpp  addOrder.cpp  deleteOrder.cpp  displayOrders.cpp  file_manager.cpp  getValidDouble.cpp  getValidInt.cpp  globalVariable.cpp  main.cpp  menu.cpp  order.cpp  order_system.cpp  printStoreOrders.cpp  product.cpp  searchOrder.cpp  setupCustomerFields.cpp  setupProducts.cpp
test/: test_name_validation.cpp  test_orders.cpp
